--- a/compra/src/main/resources/application.properties
+++ b/compra/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_default=false
 spring.jackson.deserialization..fail-on-unknown-properties=true
 spring.jackson.time-zone=America/Manaus
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+# rabbitMQ local http://localhost:15672/# senha: quest
+# swagger local  http://localhost:8085/api/swagger-ui.html#/
