--- a/compra/src/main/resources/application-test.properties
+++ b/compra/src/main/resources/application-test.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 #h2-console
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.h2.console.path=/h2
 
 # RabbitMQ
 spring.rabbitmq.host=localhost
